--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: php
 php:
-  - 5.3
   - 5.4
   - 5.5
   - 5.6
+matrix:
+  include:
+    - php: 5.2
+      dist: precise
+    - php: 5.3
+      dist: precise
 install:
   - composer install
